# Xownbot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-image.yml
Bot/: bot.py  callbacks.py  fast_telethon.py  handlers.py  tg_client.py  uploader.py
Core/: config.py  db.py  logger.py
Download/: downloader.py  exception.py  http.py
Download/helpers/: tpc__decode.py  tpc__detail.js  tpc__detail.py
Downloader/: badownloader.py  downloader.py  exception.py  extractor.py  http.py  media.py  types.py
FileServer/: exception.py  file_server.py
StreamSB/: ssb_client.py
TeleDrive/: td_client.py
utils/: helpers.py  types.py
