[tool.poetry]
name = "xownbot"
version = "0.1.0"
description = ""
authors = ["rimaduello <rima.duello@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = { extras = ["dotenv"], version = "^1.9.1" }
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
aiohttp = { extras = ["speedups"], version = "^3.8.1" }
isodate = "^0.6.1"
m3u8 = "^2.0.0"
python-telegram-bot = ">=20.0a1"
PySocks = "^1.7.1"
cryptg = "^0.3.1"
python-socks = "^2.0.3"
Telethon = "^1.24.0"
hachoir = "^3.1.3"
FastTelethonhelper = "^1.0.7"
motor = "^3.0.0"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.flake8]
ignore = ['E203', 'E266', 'E501', 'W503', 'F403', 'F401']
max-line-length = 79
max-complexity = 18
select = ['B', 'C', 'E', 'F', 'W', 'T4', 'B9']
